[migration 2] Move static analysis to Checkstyle 11 and PMD 6.55
Third and last sub-commit of Phase 2: the Gradle 7.6 / Boot 2.7.18 waypoint
now passes `make lint`.

Checkstyle 7.2 -> 11.1.0 needs three config edits, in both modules' copies:
the 1.3 DTD, LineLength moved from TreeWalker to Checker (and tabWidth
declared on both, since LineLength lost its own), and LeftCurly's removed
maxLineLength.

PMD 5.5.1 -> 6.55.0, not 7.x: Gradle 7.6 drives PMD through
net.sourceforge.pmd.ant.PMDTask, which PMD 7 removed, so PMD 7 needs Gradle
8.6+. Both rulesets are rewritten for the category/java/*.xml layout that 6
and 7 share, so Phase 3 is a version bump plus a few renames.

Two ruleset findings worth knowing:

 - Gradle's default `ruleSets` is the whole errorprone category, and
   `ruleSetFiles` adds to it rather than replacing it - 1690 violations from
   rules the project never asked for. Both modules now set `ruleSets = []`.
 - pmd-ruleset-feature-index-manager.xml never did what it claimed.
   RuleSets.apply() runs the rule chain before consulting each ruleset's file
   patterns, and nearly every rule is rule-chain based, so its include-pattern
   was ignored and every rule it shared with the main ruleset ran twice. It is
   obsolete as well. Deleted, with the main ruleset's exclude-patterns.

That left 59 real findings, all fixed at the source and none suppressed: 51
AppendCharacterWithChar on .append("\t"), 5 InefficientEmptyStringCheck
(trim().isEmpty() -> isBlank()), AvoidFieldNameMatchingMethodName on
GiemsaStain.value, a stray semicolon, and one UseLocaleWithCaseConversions
that was a real Turkish-I bug. Two rules were consciously narrowed rather
than carried across: SuspiciousConstantFieldName dropped, because its
successor FieldNamingConventions would contradict this project's long-standing
VariableNamingConventions exclusion, and ClassNamingConventions restored to
its PMD 5 patterns.

Also here:

 - root gradle.properties: --add-opens=java.prefs/java.util.pr